# auto_zotero

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260420_initial_schema.py  20260422_classifier_columns.py
config/: feeds.yaml  scoring.yaml  taxonomy.yaml
docs/: economics.md  plan_00_overview.md  plan_01_subsystem1.md  plan_02_subsystem2.md  plan_03_subsystem3.md  plan_glossary.md  plan_taxonomy.md  setup-linux.md  setup-windows.md  troubleshooting.md
docs/decisions/: 001-use-docker.md  002-sqlite-for-state.md  003-scenario-alpha.md  004-openai-text-embedding-3-large.md  005-gpt-4o-mini-tagging-extraction.md  006-zotero-mcp-external-dependency.md  008-quarantine-in-s1.md  009-zotero-mcp-not-used-by-s1-s2.md  010-ruta-a-openalex-not-zotero-translator.md  011-chromadb-bind-mount.md  012-apscheduler-default-cron-alternative.md  013-bridge-networking-host-docker-internal.md  014-stage-03-dedup-skip-attach-if-pdf-exists.md  015-s2-owns-embeddings-index.md  015-validation-checklist.md  016-rrf-composite-score.md  017-hybrid-query-retrieval.md  018-scielo-and-doaj-substages.md  019-scielo-substage-via-crossref-mirror.md  020-s2-owns-citation-graph.md  021-refs-collection-cascade.md  022-metadata-only-push-first-class.md
scripts/: healthcheck.py  run-pipeline.ps1  run-pipeline.sh  validate_chromadb_schema.py
src/zotai/: __init__.py  cli.py  config.py  state.py
src/zotai/api/: __init__.py  doaj.py  openai_client.py  openalex.py  scielo.py  semantic_scholar.py  zotero.py  zotero_queries.py
src/zotai/s1/: __init__.py  classifier.py  handler.py  run_all.py  stage_01_inventory.py  stage_02_ocr.py  stage_03_import.py  stage_04_enrich.py  stage_05_tag.py  stage_06_validate.py  status.py
src/zotai/s2/: __init__.py
src/zotai/s2/dashboard/: __init__.py
src/zotai/utils/: __init__.py  fs.py  http.py  logging.py  pdf.py
tests/: conftest.py  test_config.py  test_state.py
tests/test_api/: test_doaj.py  test_openai_client.py  test_openalex.py  test_scielo.py  test_semantic_scholar.py  test_zotero.py
tests/test_s1/: conftest.py  test_alembic_migrations.py  test_classifier.py  test_run_all.py  test_stage_01.py  test_stage_02.py  test_stage_03.py  test_stage_04.py  test_stage_04_04a.py  test_stage_05.py  test_stage_06.py  test_status.py
tests/test_utils/: test_fs.py  test_pdf.py
